<resources>
    <string name="app_name">CreaturesApp</string>
    <string name="avatar">Avatar</string>
    <string name="tap_to_set_avatar">Tap to set avatar</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="endurance">Endurance</string>
    <string name="name">Name</string>
    <string name="creature_name">Creature name</string>
    <string name="hit_points">HIT POINTS</string>
    <string name="save">SAVE</string>
    <string name="error_saving_creature">Please complete all fields.</string>
    <string name="creature_saved">Creature saved!</string>
    <string name="clear_all_creatures">Clear All Creatures</string>
    <string name="add_creature">Add Creature</string>
    <string name="log_in">log in</string>
    <string name="creature_transition_name">creature_transition</string>
    <string name="enter_password">enter password</string>
    <string name="enter_username">enter username</string>
    <string name="sign_up">Sign up</string>
    <string name="repeat_password">repeat password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="app_name_free">CreaturesApp free</string>
    <string name="app_name_paid">CreaturesApp paid</string>
    <string name="what_do_you_want_to_search">What do you want to search</string>

</resources>