<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/etRepeatPassword"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etRepeatPassword"
        app:layout_constraintBottom_toTopOf="@id/btnSignup"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:layout_marginBottom="10dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etUserName"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:hint="@string/enter_username"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        app:layout_constraintBottom_toTopOf="@id/etUserName"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:hint="@string/enter_your_name"
        android:layout_marginBottom="10dp"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_spinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>